Bug 1272429 - When hit-testing layers nested inside scrollable content inside fixed-pos items, make sure to hit the scrollable layers. r=botond

MozReview-Commit-ID: BwdvYtloW8V